--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mysql": "^2.18.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
